Update module_metadata.md